# emulate-cargo-metadata

./: Cargo.toml  sample_metadata.json
src/: main.rs
