[package]
name = "emulate-cargo-metadata"
version = "0.1.0"
authors = ["yuta-natsume <natsume.yuta@classmethod.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.47"
clap = "2.31.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
